# wasi-rs

./: .gitattributes  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
ci/: regenerate.sh  vendor-wit.sh
crates/generate-raw/: Cargo.toml
crates/generate-raw/src/: lib.rs  main.rs
crates/generate-raw/tests/: verify.rs
crates/wasi-ephemeral/: Cargo.toml  README.md  build.rs
crates/wasi-ephemeral/src/: error.rs  lib.rs
crates/wasi-ext/: Cargo.toml
crates/wasi-ext/examples/: rand.rs
crates/wasi-ext/src/: lib.rs  rand.rs
crates/wasi-http/: Cargo.toml  README.md  build.rs
crates/wasi-http/src/: http_client.rs  lib.rs
crates/wasi-http/wit/: deps.toml  proxy.wit
crates/wasip1/: Cargo.toml  README.md
crates/wasip1/src/: lib.rs
crates/wasip2/: Cargo.toml  README.md
crates/wasip2/src/: command.rs  imports.rs  proxy.rs
crates/wasip3/: Cargo.toml  README.md
crates/wasip3/examples/: cli-command.rs  http-proxy-compat.rs  http-proxy.rs
crates/wasip3/src/: command.rs  imports.rs  lib.rs  middleware.rs  proxy.rs  service.rs
crates/wasip3/src/http_compat/: body_writer.rs  conversions.rs  mod.rs
crates/witx-bindgen/: Cargo.toml  README.md
crates/witx-bindgen/src/: lib.rs  main.rs
crates/witx-bindgen/tests/: verify.rs
examples/: cli-command.rs  hello-world.rs  http-proxy.rs  rand-no_std.rs  rand.rs
src/: bindings.rs  command.rs  error.rs  errors.rs  lib.rs  lib_generated.rs  proxy.rs
src/ext/: http.rs  mod.rs  rand.rs
src/unstable/: mod.rs
src/unstable/wasi_unstable_preview0/: mod.rs  raw.rs
src/wasi_snapshot_preview1/: mod.rs  raw.rs
src/wasi_unstable/: mod.rs  raw.rs
wit/: wasi-crate.wit
