[package]
name = "wasi"
version = "0.13.0+wasi-0.2.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
description = "WASI API bindings for Rust"
edition = "2021"
categories = ["no-std", "wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasi-rs"
readme = "README.md"
documentation = "https://docs.rs/wasi"

[dependencies]
wit-bindgen-rt = { version = "0.23.0", features = ["bitflags"] }

# When built as part of libstd
compiler_builtins = { version = "0.1", optional = true }
core = { version = "1.0", optional = true, package = "rustc-std-workspace-core" }
rustc-std-workspace-alloc = { version = "1.0", optional = true }

# When built with `rand` crate integration
rand = { version = "0.8.5", default-features = false, optional = true }

[features]
default = ["std"]
std = []
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "rustc-std-workspace-alloc"]

[[example]]
name = "cli-command-no_std"
crate-type = ["cdylib"]

[[example]]
name = "cli-command"
crate-type = ["cdylib"]
required-features = ["std"]

[[example]]
name = "hello-world"
required-features = ["std"]

[[example]]
name = "http-proxy-no_std"
crate-type = ["cdylib"]

[[example]]
name = "http-proxy"
crate-type = ["cdylib"]
required-features = ["std"]

[[example]]
name = "rand-no_std"
required-features = ["rand"]

[[example]]
name = "rand"
required-features = ["std", "rand"]
