[package]
name = "wasi"
version = "0.14.2+wasi-0.2.4"
authors = ["The Cranelift Project Developers"]
description = "WASI API bindings for Rust"
categories = ["no-std", "wasm"]
keywords = ["webassembly", "wasm"]
readme = "README.md"
documentation = "https://docs.rs/wasi"
license.workspace = true
edition.workspace = true
repository.workspace = true

[workspace.package]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/bytecodealliance/wasi-rs"

[workspace.dependencies]
rand = { version = "0.8.5", default-features = false }
wasi = { version = "0.14", path = ".", default-features = false }

[workspace]
members = ["./crates/*"]

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

# When built as part of libstd
compiler_builtins = { version = "0.1", optional = true }
core = { version = "1.0", optional = true, package = "rustc-std-workspace-core" }
rustc-std-workspace-alloc = { version = "1.0", optional = true }

[features]
default = ["std"]
std = []
# Unstable feature to support being a libstd dependency
rustc-dep-of-std = ["compiler_builtins", "core", "rustc-std-workspace-alloc"]

[[example]]
name = "cli-command-no_std"
crate-type = ["cdylib"]

[[example]]
name = "cli-command"
crate-type = ["cdylib"]
required-features = ["std"]

[[example]]
name = "hello-world"
required-features = ["std"]

[[example]]
name = "http-proxy-no_std"
crate-type = ["cdylib"]

[[example]]
name = "http-proxy"
crate-type = ["cdylib"]
required-features = ["std"]
