[package]
name = "wasi"
version = "0.15.0-rc-2025-08-15+wasi-0.3.0-rc-2025-08-15"
authors = ["The Cranelift Project Developers"]
description = "WASI API bindings for Rust"
categories = ["no-std", "wasm"]
keywords = ["webassembly", "wasm"]
readme = "README.md"
documentation = "https://docs.rs/wasi"
license.workspace = true
edition.workspace = true
repository.workspace = true

[workspace.package]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/bytecodealliance/wasi-rs"

[workspace.dependencies]
rand = { version = "0.8.5", default-features = false }
wasi = { version = "0.15.0-rc-2025-08-15", path = ".", default-features = false }

[workspace]
members = ["./crates/*"]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags", "async"] }

[[example]]
name = "cli-command"
crate-type = ["cdylib"]

[[example]]
name = "hello-world"

[[example]]
name = "http-proxy"
crate-type = ["cdylib"]
