[package]
name = "wasi-http"
version = "0.0.0"
publish = false
authors = ["Bytecode Alliance"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
description = "Experimental WASI Preview2 HTTP proposal API bindings for Rust"
edition = "2021"
categories = ["no-std", "wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasi"

[dependencies]
anyhow = { workspace = true, optional = true }
bytes = { version = "1.4.0", optional = true }
http = { version = "0.2.9", optional = true }
wit-bindgen = { version = "0.4.0", default-features = false, features = ["macros", "realloc"] }

[features]
default = ["std"]
std = []
http-client = ["dep:anyhow", "dep:bytes", "dep:http"]

[badges]
maintenance = { status = "experimental" }
