[package]
name = "wasip3"
version = "0.2.0+wasi-0.3.0-rc-2025-09-16"
description = "WASIp3 API bindings for Rust"
categories = ["no-std", "wasm"]
keywords = ["webassembly", "wasm"]
documentation = "https://docs.rs/wasip3"
readme = "README.md"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# NB: async bindings require `std` right now so this doesn't optionally disable
# `std`, it's intentionally always enabled.
wit-bindgen = { workspace = true, features = ['default', 'async'] }

[dev-dependencies]
futures = "0.3.31"

[[example]]
name = "cli-command"
crate-type = ["cdylib"]

[[example]]
name = "http-proxy"
crate-type = ["cdylib"]
