[package]
name = "witx-bindgen"
version = "0.1.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
edition = "2018"
description = "Utility to turn witx files into Rust source code bindings"

[dependencies]
heck = "0.3"
witx = { path = "WASI/tools/witx", version = "0.8.7" }
cfg-if = "0.1"

[features]
default = []
multi-module = []
